# tower_hooker

./: .gitignore  config.py  docker-compose-postgres.yml  docker-compose.yml  env.example  main.py  main_app_entry.py  master_hooker.js  master_hookerv1.js  pyproject.toml  requirements.txt  setup.py  setup_infrastructure.py
config/: main_config.yaml
config/data_collection/: data_collection_map.yaml
config/influxdb/: influxdb-config.yaml  influxdb_config_meta.json
config/loki/: loki-config.yml
config/offsets/: test_offsets.yaml
config/promtail/: promtail-config.yml
frida_tower_logger/: blue_stacks_helper.py  compiled_master_hooker.js  config.py  database_logger.py  dependency_downloader.py  frida_injector.py  main.py  simple_test.py
qt_webengine_profile/: Favicons  History  History-journal  Network Persistent State  TransportSecurity  Visited Links
qt_webengine_profile/DawnGraphiteCache/: data_1  index
qt_webengine_profile/DawnWebGPUCache/: data_1  index
qt_webengine_profile/GPUCache/: data_0  data_1  data_2  index
qt_webengine_profile/Session Storage/: LOG  LOG.old
scripts/: compiled_simple_test_hooker.js  setup_docker_engine_windows.ps1
src/: frida_app.py
src/gui/: __init__.py  app_controller.py  main_window.py  setup_wizard_dialog.py
src/managers/: bluestacks_manager.py  data_ingestion_manager.py  database_manager.py  (+4 more)
tests/: test_bluestacks_helper_part1.py  test_bluestacks_helper_part2.py  test_bluestacks_helper_part3.py  test_config.py  test_dependency_downloader.py  test_minimal.js  test_orchestrator_setup.py  test_output.txt
(+27 files in other folders)
