[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Note: Problematic old tests have been renamed to .disabled extension

markers = [
    "stress: marks tests as stress tests (may be slow)",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests"
] 